--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ compileJava {
 }
 
 minecraft {
-    version = "14.21.1.2443"
+    version = "1.12.1-14.22.0.2469"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
