--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ compileJava {
 }
 
 minecraft {
-    version = "14.22.0.2467"
+    version = "1.12.1-14.22.0.2467"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -29,7 +29,7 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "snapshot_20170903"
+    mappings = "snapshot_20170624"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
