Add support/requirement on TrackAPI

--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,10 @@ dependencies {
 	compile files(
 		'ImmersiveEngineering-0.12-71-deobf.jar'
 	)
+
+	compile files(
+		'TrackAPI-1.0.jar'
+	)
 }
 
 processResources {
