Start work OC Integration

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 		name = "IGW"
 		url = "http://maven.k-4u.nl/"
 	}
+    maven { url = "http://maven.cil.li/" }
 }
 
 apply plugin: 'net.minecraftforge.gradle.forge'
@@ -72,6 +73,9 @@ dependencies {
 	)
 
 	compile "igwmod:IGW-Mod-1.12.2:1.4.3-14:userdev"
+	compile "li.cil.oc:OpenComputers:MC1.12.2-1.7.+:api"
+	compile "li.cil.oc:OpenComputers:MC1.12.2-1.7.+:doc"
+	runtime "li.cil.oc:OpenComputers:MC1.12.2-1.7.+"
 }
 
 processResources {
