--- a/template/build.gradle
+++ b/template/build.gradle
@@ -26,7 +26,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 version = "#MODVERSION#"
 group = "cam72cam.modcoremod" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "#MODNAME#"
+archivesBaseName = "#MODNAME#-1.12.2"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
