--- a/template/build.gradle
+++ b/template/build.gradle
@@ -24,9 +24,9 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "#MODVERSION#"
+version = "#MODVERSION#_1.12.2"
 group = "cam72cam.modcoremod" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "#MODNAME#-1.12.2"
+archivesBaseName = "#MODNAME#"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
