--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 
 version = version_major + '.' + version_minor + '.' + version_patch
-group = "cam72cam.modcore" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group = "cam72cam.universalmodcore" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "UniversalModCore"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
