--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,8 @@
+configurations {
+	shade
+	compile.extendsFrom shade
+}
+
 buildscript {
     ext.kotlin_version = '1.3.61'
     repositories {
@@ -10,6 +15,14 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
+
+repositories {
+	maven {
+		name = "CurseForge"
+		url = "https://minecraft.curseforge.com/api/maven/"
+	}
+}
+
 apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'kotlin'
 
@@ -39,6 +52,11 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'org.apache.commons:commons-math3:3.6.1'
+	implementation("cam72cam.universalmodcore:UniversalModCore") {
+		version {
+			branch = "forge_1.12.2"
+		}
+	}
 
     // you may put jars on which you depend on in ./libs
     // or you may define them like so..
