--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,3 @@
-configurations {
-	shade
-	compile.extendsFrom shade
-}
-
 buildscript {
     ext.kotlin_version = '1.3.61'
     repositories {
@@ -52,7 +47,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'org.apache.commons:commons-math3:3.6.1'
-	implementation("cam72cam.universalmodcore:UniversalModCore") {
+	compile("cam72cam.universalmodcore:UniversalModCore") {
 		version {
 			branch = "forge_1.12.2"
 		}
