--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,18 @@
+configurations {
+    shade
+    compile.extendsFrom shade
+}
+
 buildscript {
     ext.kotlin_version = '1.3.61'
     repositories {
         jcenter()
         maven { url = "http://files.minecraftforge.net/maven" }
-        mavenCentral()
     }
-    dependencies {
+	dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
+	}
 }
 
 repositories {
@@ -20,9 +24,11 @@ repositories {
 
 apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'kotlin'
+//Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
-version = "2.0"
-group = "org.eln"
+
+version = "0.1.0_1.12.2"
+group = "cam72cam.universalmodcoremod" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "eln2"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
@@ -31,7 +37,7 @@ compileJava {
 }
 
 minecraft {
-    version = "1.12.2-14.23.5.2768"
+    version = "1.12.2-14.23.4.2705"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -43,37 +49,30 @@ minecraft {
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
-dependencies {
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'org.apache.commons:commons-math3:3.6.1'
-	compile("cam72cam.universalmodcore:UniversalModCore") {
-		version {
-			branch = "forge_1.12.2"
+apply plugin: 'java'
+sourceSets {
+	main {
+		java {
+			srcDir "UniversalModCore/src/main/java"
 		}
 	}
+}
 
-    // you may put jars on which you depend on in ./libs
-    // or you may define them like so..
-    //compile "some.group:artifact:version:classifier"
-    //compile "some.group:artifact:version"
-      
-    // real examples
-    //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
-    //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
+dependencies {
+	shade('inventory-tweaks:InventoryTweaks:1.63:api') {
+		because "needed in UniversalModCore"
+	}
 
-    // the 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
-    //provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
+	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:"
+	implementation 'org.apache.commons:commons-math3:3.6.1'
+}
 
-    // the deobf configurations:  'deobfCompile' and 'deobfProvided' are the same as the normal compile and provided,
-    // except that these dependencies get remapped to your current MCP mappings
-    //deobfCompile 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-    //deobfProvided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-    // for more info...
-    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
-    // http://www.gradle.org/docs/current/userguide/dependency_management.html
-
+jar {
+    configurations.shade.each { dep ->
+        from(project.zipTree(dep)){
+            exclude 'META-INF', 'META-INF/**'
+        }
+    }
 }
 
 processResources {
