--- a/core/build.gradle
+++ b/core/build.gradle
@@ -30,11 +30,8 @@ jar {
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = "4.10.3"
-}
-
-
 sourceSets {
     main.kotlin.srcDirs += 'src'
 }
+
+wrapper { gradleVersion = '4.10.3' }
