--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,27 +1,10 @@
-buildscript {
-    ext.kotlin_version = '1.3.61'
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-    }
-}
-
-apply plugin: 'kotlin'
 apply plugin: 'application'
 
 mainClassName = 'org.eln2.test.Eln2CoreTestKt'
 
 defaultTasks 'run'
 
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
 }
 
@@ -31,7 +14,5 @@ jar {
 }
 
 sourceSets {
-    main.kotlin.srcDirs += 'src'
+    main.kotlin.srcDirs = ['src']
 }
-
-wrapper { gradleVersion = '4.10.3' }
