--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,21 @@
+# Ignore Gradle project-specific cache directory
 .gradle
 .classpath
 .project
 .settings
 .metadata
-*/bin
-*/build
+
+# Build and run artifacts
+build
+/dist
 */eclipse
 */run
 */logs
 */config
 */saves
-*.json
-*.bat
 options.txt
 */out
 */classes
-*/UniversalModCore
 
 # IntelliJ
 .idea
@@ -32,6 +32,3 @@ options.txt
 *.csproj.user
 *.sln
 App.config
-
-# Build artifacts
-*/obj/
