--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         java-version: 8
 
     - name: Build the project
-      run: ./gradlew build
+      run: ./gradlew bundle
     
     - name: Run tests
       run: ./gradlew test
