--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-# This is a basic workflow to help you get started with Actions
+# This workflow runs the CI for pull requests & master.
 
 name: CI
 
