--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,9 @@ jobs:
 
             -   name: Run tests
                 run: ./gradlew test
+
+            -   name: Generate coverage reports
+                run: ./gradlew jacocoTestReport
             
             -   name: codacy-coverage-reporter
                 uses: codacy/codacy-coverage-reporter-action@0.1.0
