--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,16 @@ jobs:
                 with:
                     java-version: 8
 
+            -   uses: actions/cache@v1
+                with:
+                    path: ~/.gradle/caches
+                    key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+                    # This allows restoring a *non-matching* cache on a cache miss, and considers it a match even if
+                    # (anything but) the gradle files have changed. Since it's the gradle cache directory
+                    # we're restoring, this is still acceptable and potentially useful.
+                    restore-keys: |
+                        ${{ runner.os }}-gradle-
+
             -   name: Build the project
                 run: ./gradlew bundle
 
