Replace various examplemod instances with eln2, and set various metadata

--- a/integration-mc1-14/build.gradle
+++ b/integration-mc1-14/build.gradle
@@ -39,7 +39,7 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             mods {
-                examplemod {
+                eln2 {
                     source sourceSets.main
                 }
             }
@@ -55,7 +55,7 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             mods {
-                examplemod {
+                eln2 {
                     source sourceSets.main
                 }
             }
