Added single thread log server basic functions
I made the server do some basic stuff and write logs to a file. As it
stands, this thing is a great way to fill your disks as it does no
validation of logs or anything really.

--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,8 @@ App.config
 # Rust Projects
 logcollector/target/
 
+# Ignore logs from testing the log collector
+logcollector/*.log
+
 # Project Specific
 core/*.dat
