--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,9 +11,22 @@
 			"--openWorld", "modding test world",
 			"--addOrigin", "${workspaceFolder}/integration-vs/resources/assets"
 		],
-		"console": "internalConsole",
+		"console": "integratedTerminal",
 		"internalConsoleOptions": "openOnSessionStart"
 	}, {
+		"name": "Launch Server (Mono)",
+		"type": "mono",
+		"request": "launch",
+		"preLaunchTask": "build (Debug)",
+		"program": "${env:VINTAGE_STORY}/VintagestoryServer.exe",
+		"args": [
+			"--playstyle", "surviveandbuild",
+			"--openWorld", "modding test world",
+			"--addOrigin", "${workspaceFolder}/integration-vs/resources/assets"
+		],
+		"console": "integratedTerminal",
+		"internalConsoleOptions": "openOnSessionStart"
+	},{
 		"name": "Launch Client (.NET)",
 		"type": "clr",
 		"request": "launch",
@@ -24,7 +37,7 @@
 			"--openWorld", "modding test world",
 			"--addOrigin", "${workspaceFolder}/integration-vs/resources/assets"
 		],
-		"console": "internalConsole",
+		"console": "integratedTerminal",
 		"internalConsoleOptions": "openOnSessionStart"
 	}]
 }
