--- a/.editorconfig
+++ b/.editorconfig
@@ -15,7 +15,7 @@ end_of_line = lf
 insert_final_newline = true
 charset = utf-8
 
-# Use a common indentation style for all our code.
+# Use a common indentation style for all our apps.
 # It's tab because anyone weak-sighted needs the ability to override indentation.
 indent_style = tab
 indent_size = 4
