--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,10 @@
+# ForgeGradle doesn't reliably work with the gradle daemon. >_>
+# You can override this in ~/.gradle, and it will usually work. Just don't upstream it.
+org.gradle.daemon=false
+# Never had trouble with these. Yet?
 org.gradle.caching=true
 org.gradle.parallel=true
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
+# 3G seems sufficient, but let's give it a bit more leeway.
+org.gradle.jvmargs=-Xmx6G
