--- a/.editorconfig
+++ b/.editorconfig
@@ -14,8 +14,14 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 charset = utf-8
+max_line_length = 80
 
 # Use a common indentation style for all our apps.
-# It's tab because anyone weak-sighted needs the ability to override indentation.
-indent_style = tab
+indent_style = space
 indent_size = 4
+
+[*.{kt,kts}]
+max_line_length = 120
+
+[*.java]
+max_line_length = 120
