In this state, I have Minecraft in MultiMC
If I add Bookshelf and KFF latest into a pack and launch it with
MultiMC, it works. To generate the jar, run ./gradlew build and then
grab the output from the libs/ folder (IIRC).

Happy Compiling!

--- a/integration-mc1-15/src/main/resources/META-INF/mods.toml
+++ b/integration-mc1-15/src/main/resources/META-INF/mods.toml
@@ -23,12 +23,12 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mollis lacinia magn
 '''
 
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
-[[dependencies.eln2]]
-    modId="kotlinforforge"
-    mandatory=true
-    versionRange="[1.2,]"
-    ordering="NONE"
-    side="BOTH"
+#[[dependencies.eln2]]
+#    modId="kotlinforforge"
+#    mandatory=true
+#    versionRange="[1.2,]"
+#    ordering="NONE"
+#    side="BOTH"
 [[dependencies.eln2]]
     modId="bookshelf"
     mandatory=true
