--- a/integration-mc1-16/build.gradle
+++ b/integration-mc1-16/build.gradle
@@ -10,7 +10,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
+        // https://files.minecraftforge.net/maven/net/minecraftforge/gradle/ForgeGradle/
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.0.16', changing: true
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
@@ -24,6 +25,7 @@ repositories {
         name = 'kotlinforforge'
         url = 'https://thedarkcolour.github.io/KotlinForForge/'
     }
+    maven { url 'https://maven.blamejared.com' }
 }
 
 minecraft {
@@ -32,7 +34,7 @@ minecraft {
     // stable_#            Stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    mappings channel: 'snapshot', version: '20200514-1.16'
+    mappings channel: 'snapshot', version: '20201028-1.16.3'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
@@ -96,10 +98,10 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.16.2-33.0.42'
-    implementation 'thedarkcolour:kotlinforforge:1.4.1'
+    minecraft 'net.minecraftforge:forge:1.16.5-36.0.22'
+    implementation 'thedarkcolour:kotlinforforge:1.9.0'
 
-    compile "net.darkhax.bookshelf:Bookshelf-1.16.2:7.0.10:deobf"
+    compile "net.darkhax.bookshelf:Bookshelf-1.16.5:10.0.1:deobf"
 
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
@@ -121,7 +123,10 @@ dependencies {
 
 }
 
-compileKotlin {
+// Ignore KotlinCompile being a "compile" error. It's here.
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
+tasks.withType(KotlinCompile).all {
     kotlinOptions {
         jvmTarget = '1.8'
         languageVersion = '1.4'
