--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,10 @@ jobs:
                     # we're restoring, this is still acceptable and potentially useful.
                     restore-keys: |
                         ${{ runner.os }}-gradle-
-
+                        
+            -   name: Change Gradlew permission
+                run: chmod +x ./gradlew
+                
             -   name: Build the project
                 run: ./gradlew bundle
 
