--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,13 +2,8 @@
 
 name: CI
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
-on:
-    push:
-        branches: [ master ]
-    pull_request:
-        branches: [ master ]
+# Controls when the action will run
+on: [push]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -43,11 +38,3 @@ jobs:
 
             -   name: Run tests
                 run: ./gradlew test
-
-            -   name: Generate coverage reports
-                run: ./gradlew jacocoTestReport
-
-            -   name: codacy-coverage-reporter
-                uses: codacy/codacy-coverage-reporter-action@0.1.0
-                with:
-                    project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
