--- a/integration-mc1-16/build.gradle
+++ b/integration-mc1-16/build.gradle
@@ -101,6 +101,7 @@ dependencies {
     minecraft 'net.minecraftforge:forge:1.16.5-36.0.22'
     implementation 'thedarkcolour:kotlinforforge:1.9.0'
 
+    implementation project(':core')
     compile "net.darkhax.bookshelf:Bookshelf-1.16.5:10.0.1:deobf"
 
     // You may put jars on which you depend on in ./libs or you may define them like so..
