--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
                 run: chmod +x ./gradlew
 
             -   name: Build the project
-                run: ./gradlew bundle
+                run: ./gradlew build
 
             -   name: Run tests
                 run: ./gradlew test
