Added block and item registries. Set up infrastructure for cells (Nodes). Cells are created and managed by a cell tile entity, but they can also be created by the graph manager at startup (loading them from the disk). They exist in a CellGraph class, which holds the cells for the entire graph. To register a cell type, you need to implement the CellBase class and a Cell Provider, which requires has a factory method and a connection predicate, used to check if connections can be made for a certain direction. The cell then needs to be registered using the deferred register in the CellRegistry class. Then, the CellBlockBase class must be inherited from. Override the getCellProvider method to return the resource location from the registry. Also register it in the Block Registry class.
The tile entities will create and place the cell when they are placed. They will call the SetPlaced method on the cell class. The tile entities also store the graph ID to disk. When they get loaded (when the chunks get loaded) they will read the graph ID, get the graph, then get the cell instance using their position for lookup. They also call the methods to update the graph and connections for the cells, and the destroy method when they get broken by the player.

--- a/build.gradle
+++ b/build.gradle
@@ -3,19 +3,24 @@ buildscript {
     repositories {
         // These repositories are only for Gradle plugins, put any other repositories in the repository block further below
         maven { url = 'https://maven.minecraftforge.net' }
+        maven { url = 'https://maven.parchmentmc.org' }
         mavenCentral()
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
+        classpath 'org.parchmentmc:librarian:1.+'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
+apply plugin: 'org.parchmentmc.librarian.forgegradle'
 apply plugin: 'kotlin'
 apply from: 'https://raw.githubusercontent.com/thedarkcolour/KotlinForForge/site/thedarkcolour/kotlinforforge/gradle/kff-3.0.0.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
+
+
 
 version = '1.0'
 group = 'org.eln2.mc' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -26,7 +31,7 @@ java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 minecraft {
-    mappings channel: 'official', version: '1.18'
+    mappings channel: 'parchment', version: "2022.01.23-1.18.1"
 
     runs {
         client {
