--- a/.github/workflows/ci-server.yml
+++ b/.github/workflows/ci-server.yml
@@ -1,6 +1,6 @@
 # This workflow runs the CI for pull requests & master.
 
-name: CI
+name: CI Run Server
 
 # Controls when the action will run
 on: [push]
