--- a/build.gradle
+++ b/build.gradle
@@ -110,8 +110,12 @@ repositories {
 dependencies {
     minecraft 'net.minecraftforge:forge:1.18.1-39.0.76'
     implementation 'thedarkcolour:kotlinforforge:3.1.0'
-    library(files("libs/libelectric-0.1.0.jar"))
-    library("org.apache.commons:commons-math3:3.6.1")
+    library("org.eln2:libelectric:0.1") {
+        version {
+            branch = "main"
+        }
+    }
+    library "org.apache.commons:commons-math3:3.6.1"
 
     // Real mod deobf dependency examples - these get remapped to your current mappings
     // compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api") // Adds JEI API as a compile dependency
