Update mod links

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,7 +1,7 @@
 modLoader="kotlinforforge"
 loaderVersion="[3,)"
-license="Code - MIT, Content - CC0"
-issueTrackerURL="https://github.com/age-series/eln2/issues" #optional
+license="Code - MIT, Content - CC0 (unless otherwise specified)"
+issueTrackerURL="https://github.com/age-series/ElectricalAge2/issues"
 
 [[mods]]
 modId="eln2"
@@ -10,7 +10,7 @@ displayName="Electrical Age 2"
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
 #updateJSONURL="https://change.me.example.invalid/updates.json" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
-displayURL="https://eln2.org/"
+displayURL="https://age-series.org/"
 # A file name (in the root of the mod JAR) containing a logo for display
 logoFile=""
 credits="The Age Series Team"
