--- a/build.gradle
+++ b/build.gradle
@@ -98,6 +98,7 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
     // Put repositories for dependencies here
     // ForgeGradle automatically adds the Forge maven and Maven Central for you
 
@@ -110,7 +111,7 @@ repositories {
 dependencies {
     minecraft 'net.minecraftforge:forge:1.18.1-39.0.76'
     implementation 'thedarkcolour:kotlinforforge:3.1.0'
-    library(files("libs/libage-0.9.0.jar"))
+    library('com.github.age-series:libage:main-SNAPSHOT')
     library("org.apache.commons:commons-math3:3.6.1")
 
     // Real mod deobf dependency examples - these get remapped to your current mappings
