--- a/build.gradle
+++ b/build.gradle
@@ -11,12 +11,14 @@ buildscript {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
         classpath 'org.parchmentmc:librarian:1.+'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
         classpath "gradle.plugin.com.github.johnrengelman:shadow:7.1.1"
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.parchmentmc.librarian.forgegradle'
 apply plugin: 'kotlin'
+apply plugin: 'kotlinx-serialization'
 apply plugin: "com.github.johnrengelman.shadow"
 apply from: 'https://raw.githubusercontent.com/thedarkcolour/KotlinForForge/site/thedarkcolour/kotlinforforge/gradle/kff-3.0.0.gradle'
 apply plugin: 'eclipse'
@@ -116,6 +118,8 @@ dependencies {
     runtimeOnly fg.deobf("mcp.mobius.waila:wthit:forge-4.5.1")
     library('com.github.age-series:libage:main-SNAPSHOT')
     library("org.apache.commons:commons-math3:3.6.1")
+    library("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2")
+    library('com.charleskorn.kaml:kaml:0.40.0')
 
     // Real mod deobf dependency examples - these get remapped to your current mappings
     // compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api") // Adds JEI API as a compile dependency
