--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,6 @@ apply from: 'https://raw.githubusercontent.com/thedarkcolour/KotlinForForge/site
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-
-
 version = '1.0.1'
 group = 'org.eln2.mc'
 archivesBaseName = 'eln2'
@@ -42,13 +40,14 @@ minecraft {
     runs {
         client {
             workingDirectory project.file('run')
-
             // The markers can be added/remove as needed separated by commas.
             // "SCAN": For mods scan.
             // "REGISTRIES": For firing of registry events.
             // "REGISTRYDUMP": For getting the contents of all registries.
             property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'debug'
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
 
             mods {
                 eln2 {
@@ -103,6 +102,10 @@ repositories {
     mavenCentral()
     maven { url 'https://jitpack.io' }
     maven { url "https://maven.bai.lol" }
+    maven {
+        name "tterrag maven"
+        url "https://maven.tterrag.com/"
+    }
     // Put repositories for dependencies here
     // ForgeGradle automatically adds the Forge maven and Maven Central for you
 
@@ -120,6 +123,7 @@ dependencies {
     library("org.apache.commons:commons-math3:3.6.1")
     library("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2")
     library('com.charleskorn.kaml:kaml:0.40.0')
+    implementation fg.deobf("com.jozufozu.flywheel:Flywheel-Forge:1.18-0.7.0.79")
 
     // Real mod deobf dependency examples - these get remapped to your current mappings
     // compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api") // Adds JEI API as a compile dependency
