Added part tick API (unfortunately, access transformers were required), and added a utility average list to better log the tick times

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,3 @@
 public-f net.minecraft.world.inventory.AbstractContainerMenu f_38848_
+public net.minecraft.world.level.chunk.LevelChunk m_156406_(Lnet/minecraft/world/level/block/entity/BlockEntity;)V # updateBlockEntityTicker
+public net.minecraft.world.level.chunk.LevelChunk m_156412_(Lnet/minecraft/core/BlockPos;)V # removeBlockEntityTicker
